objects/Field_Contact__c.object
<CustomObject>
    <description>Used by TPO Outside Sales to track field visits</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Field Contact is controlled by the Account it&apos;s associated with</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Contacts</relationshipLabel>
        <relationshipName>Field_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Visit__c</fullName>
        <label>Date/Time of Visit</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Field Contact</label>
    <nameField>
        <displayFormat>FC-{YYYYMMDD}-{00}</displayFormat>
        <label>Field Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Comment_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Comments__c )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Comments are required before saving</errorMessage>
    </validationRules>
</CustomObject>